[package]
name = "icogen"
version = "1.0.0"
edition = "2021"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
description = "Quickly convert image files into Windows .ico files"
repository = "https://github.com/hamaluik/icogen"
homepage = "https://github.com/hamaluik/icogen"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ico", "converter"]
categories = ["command-line-utilities", "development-tools", "encoding", "multimedia::images"]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true

[dependencies]
image = "0.24"
console = "0.15"
clap = { version = "3.2", features = ["derive", "cargo", "unicode", "wrap_help"] }
anyhow = "1"

